# quant1024

./: .gitignore  .packageignore  ARCHITECTURE_LIVE_TRADING.md  HOW_TO_USE_AS_PACKAGE.md  INSTALLATION_GUIDE.md  LIVE_TRADING_QUICKSTART.md  MANIFEST.in  NEW_FEATURE_SUMMARY.md  PUBLISHING.md  README.md  README_zh.md  check_package.sh  publish.sh  pyproject.toml  setup.py  test_sdk_modules.py
.github/workflows/: publish-to-pypi.yml
examples/: README_LIVE_TRADING.md  add_new_exchange_example.py  live_trading_example.py  test_live_trading.py  test_live_trading_integration.py
examples/lean-engine/: README.md  __init__.py  backtest.py  btc_futures_arbitrage.py  main.py
examples/lean-engine/backtest_result/: 2026-01-27_12-19-39.json
examples/sdk-examples/: README.md  authenticated_example.py  backtest_report.md  btc_backtest_report.md  dual_ma_backtest.py  eth_backtest_report.md  eth_trades.csv  final_report.md  price_trigger_buy.py  sdk_usage_example.py  story_test_flows.py
guide/zh-hans/: LIVE_TRADING.md
src/quant1024/: __init__.py  live_trading.py
src/quant1024/auth/: __init__.py  hmac_auth.py
src/quant1024/exchanges/: exchange_1024ex.py
src/quant1024/interfaces/: __init__.py  advanced_orders.py  market_data.py  positions.py  trading.py
src/quant1024/monitor_feeds/: README.md  __init__.py  example.py  runtime_reporter.py  types.py
src/quant1024/qc/: __init__.py  client.py  (+3 more)
tests/: test_1024ex.py  test_core.py  test_data_retrieval.py
testsprite_tests/: standard_prd.json  testsprite-mcp-test-report.html  testsprite-mcp-test-report.md  testsprite_backend_test_plan.json
testsprite_tests/tmp/: code_summary.json  config.json
(+9 files in other folders)
